[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/minigames/metronome/target.png" type="Texture" id=1]
[ext_resource path="res://assets/minigames/metronome/reticule.png" type="Texture" id=2]
[ext_resource path="res://scenes/minigames/metronome/metronome_minigame.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 127.996, 38.4024 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.7831, 96.1732 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.4178, 370.036 )

[node name="Metronome" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.67451, 0.447059, 0.776471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="Sprite" type="Sprite" parent="Target"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 1 )

[node name="Target" type="Area2D" parent="Target"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Target"]
shape = SubResource( 1 )

[node name="Reticule" type="Node2D" parent="."]
position = Vector2( 0, 360 )

[node name="Sprite" type="Sprite" parent="Reticule"]
scale = Vector2( 0.1, 0.75 )
texture = ExtResource( 2 )

[node name="Reticule" type="KinematicBody2D" parent="Reticule"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reticule/Reticule"]
shape = SubResource( 3 )

[node name="DeathTrigger" type="Area2D" parent="."]
position = Vector2( 1300, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathTrigger"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Target/Target" to="." method="_on_Target_body_entered"]
[connection signal="body_exited" from="Target/Target" to="." method="_on_Target_body_exited"]
[connection signal="body_entered" from="DeathTrigger" to="." method="_on_DeathTrigger_body_entered"]
